--- a/index.html
+++ b/index.html
@@ -229,6 +229,8 @@
             </div>
              <hr class="dark:border-gray-700">
              <!-- Navigation Links -->
+             <a href="#" class="sidebar-link block py-2 text-gray-700 dark:text-gray-300 hover:text-blue-500" data-lang-key="navHome">Home</a>
+             <a href="#map" class="sidebar-link block py-2 text-gray-700 dark:text-gray-300 hover:text-blue-500" data-lang-key="navMap">Map</a>
              <a href="#team" class="sidebar-link block py-2 text-gray-700 dark:text-gray-300 hover:text-blue-500" data-lang-key="navTeam">Our Team</a>
              <hr class="dark:border-gray-700">
             <!-- Settings -->
@@ -381,7 +383,7 @@
 
         // --- TEAM DATA ---
         const teamMembers = [
-            { name: "Ahmed Salem Khalifa", role: "Team Lead & LLM Specialist", desc: "Responsible for the overall project vision, managing the development timeline, and coordinating the team's tasks. His expertise as an LLM Specialist will guide any future integrations of AI-powered features.", img: "https://i.ibb.co/RGtFVr0L/IMG-20241204-WA0010-Copy.jpg" },
+            { name: "Ahmed Salem Khalifa", role: "Team Lead & LLM Specialist", desc: "Responsible for the overall project vision, managing the development timeline, and coordinating the team's tasks. His expertise as an LLM Specialist will guide any future integrations of AI-powered features.", img: "https://i.ibb.co/RGtFVr0/IMG-20241204-WA0010-Copy.jpg" },
             { name: "Roqaya Mohamed Ahmed", role: "Business Strategist & Frontend Developer", desc: "Responsible for aligning the project with market needs and developing the business strategy. She will also contribute to frontend development, focusing on a user-friendly interface.", img: "https://i.ibb.co/VZpYzy3/Whats-App-Image-2025-09-26-at-15-55-43-eed85144.jpg" },
             { name: "Ahmed Essam Wagdy", role: "Frontend Developer & Researcher", desc: "Responsible for implementing core features like the interactive map and API integrations. His research skills are crucial for finding the best technical solutions.", img: "https://i.ibb.co/rKYQGD4k/Whats-App-Image-2025-09-26-at-1-11-41-AM.jpg" },
             { name: "Loay Ahmed Abo El-Maty", role: "Frontend Developer & Researcher", desc: "Responsible for developing features such as the animated weather graphics. He will also conduct research to support the technical implementation.", img: "https://i.ibb.co/39htsQ0s/Whats-App-Image-2025-09-24-at-11-41-20-PM.jpg" },
@@ -395,6 +397,8 @@
                 appName: "Air Quality Monitor",
                 navLogin: "Login",
                 navSignup: "Sign Up",
+                navHome: "Home",
+                navMap: "Map",
                 navTeam: "Our Team",
                 navSettings: "Settings",
                 navLanguage: "Language",
@@ -472,6 +476,8 @@
                 appName: "مراقب جودة الهواء",
                 navLogin: "تسجيل الدخول",
                 navSignup: "حساب جديد",
+                navHome: "الرئيسية",
+                navMap: "الخريطة",
                 navTeam: "فريقنا",
                 navSettings: "الإعدادات",
                 navLanguage: "اللغة",
